# xwine

./: README.md
source/: AUTHORS  BUGS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.status  configure  configure.in  xwine.glade
source/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.0~  traces.1  traces.2  traces.3
source/doc/: NEWS
source/doc/en/: FAQ.html  advanceduse.html  configureapp.html  configurewine.html  credits.html  firststeps.html  index.html  installation.html  introduction.html
source/doc/es/: FAQ_es.html  index_es.html
source/doc/fr/: FAQ.html  configurerapp.html  configurerwine.html  credits.html  index.html  installation.html  introduction.html  premierspas.html  utilisation.html
source/macros/: Makefile  Makefile.in  xml2-check.m4
source/menu/: .directory  wine-panel.desktop  xwine-help.desktop  xwine.desktop
source/pixmaps/: console.xpm  debug.xpm  dll.xpm  edit.xpm  export.xpm  folder.xpm  gfx.xpm  gnome-calc2.xpm  gnome-terminal.xpm  hdd.xpm  help.xpm  log.xpm  look.xpm  multimedia.xpm  ports.xpm  progman.xpm  progs.xpm  regedit.xpm  registry.xpm  restore.xpm  setup.xpm  version.xpm  winmine.xpm  xwine_16.xpm
source/pixmaps/.xvpics/: export.xpm  restore.xpm
source/src/: Makefile  Makefile.am  Makefile.in  callbacks.h  commun.c  commun.h  donnees.h  interface.c  interface.h  main.c  w_about.c  w_add_param.c  w_app_dll.c  w_calc.c  w_config.c  w_dll_gest.c  w_dll_override.c  w_drive_cfg.c  w_drive_sel_path.c  w_edit_file_selec.c  w_editeur.c  w_executer.c  w_export.c  w_gest_app.c  w_gest_drive.c  w_install_app.c  w_log.c  w_menu.c  w_messages.c  w_parcour_exe.c  w_prefs.c  w_quitter.c  w_run_app.c  w_wine_config.c  w_wine_console.c  w_wine_gfx.c  w_wine_look.c  w_wine_media.c  w_wine_port.c  w_wine_registry.c  (+3 more)
source/src/.deps/: commun.P  commun.Po  interface.P  interface.Po  main.P  main.Po  support.P  support.Po  w_about.P  w_about.Po  w_add_param.P  w_add_param.Po  w_app_dll.P  w_app_dll.Po  w_calc.P  w_calc.Po  w_config.P  w_config.Po  w_dll_gest.P  w_dll_gest.Po  w_dll_override.P  w_dll_override.Po  w_drive_cfg.P  w_drive_cfg.Po  w_drive_sel_path.P  w_drive_sel_path.Po  w_edit_file_selec.P  w_edit_file_selec.Po  w_editeur.P  w_editeur.Po  w_executer.P  w_executer.Po  w_export.P  w_export.Po  w_gest_app.P  w_gest_app.Po  w_gest_drive.P  w_gest_drive.Po  w_install_app.P  w_install_app.Po  (+34 more)
source/src/lang/: lang.de.xml  lang.en.xml  lang.es.xml  lang.fr.xml
